fix: Collapse 内容溢出不出现滚动条

--- a/src/components/Collapse/collapse.less
+++ b/src/components/Collapse/collapse.less
@@ -10,6 +10,7 @@
 .@{t}-sticky{
     position: sticky;
     top: 0;
+    overflow: auto;
 }
 
 .@{t} {
